everything is responsive, contact page is added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="format-detection" content="telephone=no">
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -49,7 +50,7 @@
                         <ul class="nav">
                             <li><a href="register.html">Register</a></li>
                             <li><a href="about.html">About us</a></li>
-                            <li><a href="#">Contact / Help</a></li>
+                            <li><a href="contact.html">Contact / Help</a></li>
                             <li><a href="register_success_1.html">Post-register1</a></li>
                             <li><a href="register_success_2.html">Post-register2</a></li>
                             <li><a href="register_success_3.html">Post-register3</a></li>
