enhancements and bug fixing

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                                 <li class="input-block"><input type="text" placeholder="First Name*" /></li>
                                 <li class="input-block"><input type="text" placeholder="Last Name*" /></li>
                                 <li class="input-block"><input type="text" placeholder="Email Address*" /></li>
-                                <li class="input-block"><input type="number" placeholder="Phone Number" /></li>
+                                <li class="input-block"><input type="tel" placeholder="Phone Number" /></li>
                                 <li class="notes-block">
                                     <span class="caption">Please enter you question / service request below. Someone will be contacting you shortly.</span>
                                     <textarea></textarea>
