--- a/firm_admin.html
+++ b/firm_admin.html
@@ -70,7 +70,12 @@
                                     <li class="input-block"><input type="text" placeholder="Street Address 2" /></li>
                                     <li class="input-block"><input type="text" placeholder="City" /></li>
                                     <li class="input-block double">
-                                        <input type="text" placeholder="State" />
+                                        <!--<input type="text" placeholder="State" />-->
+                                        <select class="first state-field enable-custom-selectmenu">
+                                            <option>MN</option>
+                                            <option>FL</option>
+                                            <option>NY</option>
+                                        </select>
                                         <input type="number" placeholder="Zip" />
                                     </li>
                                     <li class="input-block"><input type="url" placeholder="Company URL" /></li>
