--- a/firm_advisors.html
+++ b/firm_advisors.html
@@ -152,13 +152,10 @@
                                         <h2>Advisor's Profile</h2>
                                         <a href="#" class="btn btn-yellow btn-auto-width">Clear / Add new</a>
                                     </li>
-                                    <li class="input-block">
-                                        <span class="icon"></span>
+                                    <li class="input-block double even-double">
                                         <input type="text" placeholder="First Name*" required />
-                                    </li>
-                                    <li class="input-block">
-                                        <span class="icon"></span>
                                         <input type="text" placeholder="Last Name*" required />
+                                        <span class="icon"></span>
                                     </li>
                                     <li class="input-block">
                                         <span class="icon"></span>
@@ -166,7 +163,7 @@
                                     </li>
                                     <li class="input-block">
                                         <span class="icon"></span>
-                                        <input type="number" placeholder="Phone Number" />
+                                        <input type="tel" placeholder="Phone Number" />
                                     </li>
                                     <li class="input-block">
                                         <span class="icon"></span>
