--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                                     <label><input type="checkbox" /> Remember me</label>
                                     
                                 </li>
+                                <li class="buttons-block">
+                                    <button type="submit" class="btn">Log in</button>
+                                </li>
                                 <li><a href="#">Forgot Login/Password?</a></li>
                             </ul>
                         </form>
@@ -102,7 +105,7 @@
                                 We use 128-bit SSL encryption – the same security that banks use. We do not ask you for any sensitive information such as password or account numbers. It’s free - so what are you waiting for?
                             </p>
                             <p>
-                                Instead of spending hours reading page after page of generic advice, spend 15 minutes with our interactive wHealth Check application, that adapts and evolves as you go.  We will not only assess, score, and provide detail on your financial strengths and weaknesses, and help you start improving your overall wHealth.
+                                Instead of spending hours reading page after page of generic advice, spend 15 minutes with our interactive wHealth Check application, that adapts and evolves as you go.
                             </p>
                             
                             <a href="#" class="btn btn-yellow">Sign up</a>
