--- a/clients.html
+++ b/clients.html
@@ -64,7 +64,7 @@
                                 </li>
                                 <li class="input-block">
                                     <span class="icon"></span>
-                                    <input type="number" placeholder="Phone Number" />
+                                    <input type="tel" placeholder="Phone Number" />
                                 </li>
                                 <li class="select-block">
                                     <select class="enable-custom-selectmenu">
